# opengltf

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Application.cpp.B669E04D38D74E2B.idx  Application.h.C296A4248E9B9B69.idx  Shader.cpp.9A60D95A5B6B1A3E.idx  Shader.h.69C7A573C2736EB4.idx  _fixes.hpp.2C035FE252C5C0DB.idx  _vectorize.hpp.6365AFD176C2DDCC.idx  base.h.3A81310C842A19E2.idx  common.hpp.6F39BDEB04BA7FF3.idx  compute_common.hpp.E0A2E73138559C01.idx  compute_vector_relational.hpp.F2A520978D612209.idx  constants.hpp.F627795566F21795.idx  constants.inl.3FECECB0AE56084D.idx  context.c.F3631BAB0AD3B81F.idx  core.h.88D00E964C8EAEFF.idx  dual_quaternion.hpp.7DA33F1E7C3B1AB9.idx  dual_quaternion.inl.339E74ACFA614F4F.idx  egl_context.c.C6CD1D337EADFDD0.idx  epsilon.hpp.B8FAF41DC278538D.idx  epsilon.inl.779476C50462DE64.idx  exponential.hpp.605CC4CBCF36A6CC.idx  format-inl.h.855BF5150A812AF6.idx  format.cc.F75F56F0C43278A5.idx  format.h.6BEA81376F138CF6.idx  func_common.inl.E91DB560874F0C2F.idx  func_exponential.inl.5B8CDB28C7F065E6.idx  func_geometric.inl.C1B98B37F756A352.idx  func_integer.inl.E80CEB289D4EF936.idx  func_matrix.inl.35458A5C1D4E98AD.idx  func_packing.inl.B384EDB3F5D143BB.idx  func_trigonometric.inl.664259780F9182EC.idx  func_vector_relational.inl.4A53EA8C90070297.idx  fwd.hpp.A0E8D11D5A00EA46.idx  geometric.hpp.B2ABACD12D3F62DC.idx  glad.c.31A72ED90805EBB3.idx  glad.h.ECB8254B459C238C.idx  glfw3.h.B8DDB0C915520768.idx  glfw3native.h.6A623CACD97A695B.idx  glm.cpp.E5D7F2AD05AED39D.idx  glm.hpp.FC4A54976C1DD35A.idx  glx_context.c.2433A251BA12070F.idx  (+221 more)
include/: Application.h
include/Renderer/: Camera.h  IndexBuffer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
shaders/: shader.fs  shader.vs
src/: Application.cpp
src/Renderer/: Camera.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
